# wasm-fetch-example

./: Cargo.toml  README.md  index.html
src/: lib.rs
